# 003.OpenCV-CPP-Sample

./: CMakeLists.txt  README.md  cv2-sample.cpp
